2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.man:
	Document the -silent-dup-error switch

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeyhook.c:
	Do not grab ALT-TAB when window is in multiwindow mode
	
2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winprefs.h:
	Fix crash with not matching definitions of PATH_MAX
	
2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeynames.h:
	Adjust keysyms for  Hiragana_Katakana toggle and backslash/underscore
	on Japanese and ABNT2 keyboards

2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeyhook.c
	* winwndproc.c:
	Make keyhook feature work in multiwindowmode too
	Hook windows keys

2005-01-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winblock.c:
	Fix a possible null-pointer dereference	(Keishi Suenaga)

2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile 
	* InitOutput.c 
	* XWin.rc 
	* winerror.c 
	* wintrayicon.c 
	* winvideo.c
	* winshaddd.c       	
	* winwindow.h:
	Set PROJECT_NAME in Imakefile to create alternative window titles 
	for Cygwin/X and Xming
	
2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowclass.c:
	* winmultiwindowwm.c:
	Fix crash with non-nullterminated strings (reported by Øyvind Harboe)

2004-12-14  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	EnumDisplayMonitors is not available on Window NT4 and 95. Resolve
	the function dynamicly

2004-12-08  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	Added support for placing the main window with the @<monitor#>.
	Patch by Mark Fisher, small changes by Alexander Gottwald
	
2004-12-06  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.rc:
	include windows.h

2004-12-05  Alexander Gottwald  <ago at freedesktop dot org>

	* ddraw.h: