@@ -42,6 +42,7 @@ void winDrvMsg (int scrnIndex, MessageType type, const char *format, ...);
 void winMsgVerb (MessageType type, int verb, const char *format, ...);
 void winMsg (MessageType type, const char *format, ...);
 void winDebug (const char *format, ...);
+void winTrace (const char *format, ...);
 
 void winErrorFVerb (int verb, const char *format, ...);
 void winW32Error(int verb, const char *message);
